<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lists.NewListItem"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="440dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/listView"
            android:layout_width="409dp"
            android:layout_height="440dp"
            android:background="#7C4C4040"></ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        android:textColor="#D50000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="684dp"
        android:background="#7CB59191"
        android:onClick="onClick"
        android:text="@string/backButton"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addList"
        android:layout_width="178dp"
        android:layout_height="61dp"
        android:layout_marginTop="176dp"
        android:background="#7CB59191"
        android:text="@string/add1"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="180dp"
        android:layout_height="41dp"
        android:layout_marginTop="125dp"
        android:background="#7CB59191"
        android:ems="10"
        android:hint="@string/itemName"
        android:inputType="textPersonName"
        android:textColor="#D50000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/listNum"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:background="#7CB59191"
        android:ems="10"
        android:hint="@string/listNumber"
        android:inputType="textPersonName"
        android:textColor="#D50000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="222dp"
        android:layout_height="43dp"
        android:layout_marginTop="70dp"
        android:text="@string/listChoise"
        android:textColor="#D50000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/price"
        android:layout_width="180dp"
        android:layout_height="41dp"
        android:layout_marginTop="125dp"
        android:background="#7CB59191"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:textColor="#D50000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/piece"
        android:layout_width="180dp"
        android:layout_height="41dp"
        android:layout_marginTop="176dp"
        android:background="#7CB59191"
        android:ems="10"
        android:hint="@string/piece"
        android:inputType="textPersonName"
        android:textColor="#D50000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>