<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".item.Items"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/itemDb"
        android:textColor="#D50000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/modButton"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="70dp"
        android:background="#7CB59191"
        android:onClick="onClick"
        android:text="@string/itemMod"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/deleteItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newItem" />

    <Button
        android:id="@+id/newItem"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="70dp"
        android:background="#7CB59191"
        android:onClick="onClick"
        android:text="@string/newItem"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/modButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteItem"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="80dp"
        android:background="#7CB59191"
        android:onClick="onClick"
        android:text="@string/deleteItem"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modButton" />
</androidx.constraintlayout.widget.ConstraintLayout>