<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".item.ItemMod"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="400dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/listView"
            android:layout_width="409dp"
            android:layout_height="400dp"
            android:background="#7C4C4040"></ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/itemMod"
        android:textColor="#D50000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#7CB59191"
        android:onClick="onClick"
        android:text="@string/backButton"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/barCode"
        android:layout_width="381dp"
        android:layout_height="41dp"
        android:layout_marginTop="60dp"
        android:background="#7CB59191"
        android:ems="10"
        android:hint="@string/barcode"
        android:inputType="textPersonName"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="381dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:background="#7CB59191"
        android:ems="10"
        android:hint="@string/itemMod"
        android:inputType="textPersonName"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barCode" />

    <EditText
        android:id="@+id/price"
        android:layout_width="381dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:background="#7CB59191"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="textPersonName"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/modButton"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginTop="220dp"
        android:background="#7CB59191"
        android:text="@string/itemMod"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nameModButton"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginTop="220dp"
        android:background="#7CB59191"
        android:text="@string/nameMod"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/priceModButton"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginTop="220dp"
        android:background="#7CB59191"
        android:text="@string/priceMod"
        android:textColor="#D50000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>